--- a/src/app/register/component/register/register.component.css
+++ b/src/app/register/component/register/register.component.css
@@ -1,6 +1,7 @@
 main{
   width: 600px;
   position: relative;
+  color: black;
 }
 #close{
   background-color: white;
@@ -22,6 +23,7 @@ main{
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(202,202,202);
 }
+
 #registerForm{
   width: 560px;
   margin: auto;
