--- a/src/app/home/component/home/home.component.css
+++ b/src/app/home/component/home/home.component.css
@@ -3,10 +3,10 @@
   height: 50px;
   border-bottom: solid 1px rgb(213,213,213);
   box-shadow: 0 0 3px rgb(228,228,228);
-  background: rgb(238,238,238);
-  position: absolute;
+  background: rgb(112,57,135);
   width: 100%;
   z-index: 1;
+  position: fixed;
 }
 
 /*左边头部*/
@@ -23,16 +23,15 @@
 /*打开关闭导航面板按钮*/
 #toggleNavBtn{
   float: right;
-  position: relative;
-  left: 20px;
   width: 30px;
   height: 30px;
   background: white;
 }
 #toggleNavBtn i{
+  font-size: 20px;
   color: gray;
-  animation: asc 5s  linear infinite ;
-  transform-origin:12px 20px ;
+  animation: asc1 5s  linear infinite ;
+  transform-origin:20px 12px ;
 }
 @keyframes asc {
   0% {
@@ -67,7 +66,7 @@
   margin-right: 20px;
 }
 #rightHeader i{
-  color: gray;
+  color: white;
 }
 
 /*头部结束*/
@@ -77,7 +76,7 @@
   width: 100%;
   position:absolute;
   z-index: 0;
-  background: rgb(241,241,241);
+  background: rgb(233,237,240);
 }
 #navContent{
   padding-top: 52px;
@@ -86,10 +85,12 @@
 #sideNavPanel{
   border-right: 1px solid rgb(213,213,213);
   box-shadow: 0 0 5px rgb(200,200,200);
+  background: rgb(241,241,241);
 }
 
 /*主体内容*/
 #allContent{
+  position: relative;
   padding-top: 52px;
 }
 
