--- a/src/app/home/component/home/home.component.html
+++ b/src/app/home/component/home/home.component.html
@@ -6,7 +6,7 @@
 
     <img src="../../../../assets/img/homeLogo.png" height="35"/>
     <button id="toggleNavBtn" md-mini-fab (click)="sidenav.toggle()" (mousedown)="killnNavToggleBug()">
-      <i class="material-icons">more_vert</i>
+      <i class="material-icons">arrow_back</i>
     </button>
     <span id="contentTitle"></span>
   </div>
@@ -25,9 +25,10 @@
     </button>
     <button md-icon-button><i class="material-icons icon-btn">person</i></button>
   </div>
+
+
 </div>
 <!--头部结束-->
-
 <md-sidenav-container id="navContainer">
 
   <!--导航面板开始-->
@@ -35,7 +36,7 @@
     <div id="navContent">
       <div id="userProfile">
         <img id="profileImg" src="../../../../assets/img/profile.jpg"/>
-        <p id="nickName">笨笨的小熊</p>
+        <p id="nickName" (click)="top()" >笨笨的小熊</p>
       </div>
       <!--导航ul-->
       <div id="allNav">
@@ -83,8 +84,10 @@
   <!--导航面板开始-->
 
   <!--主体内容开始-->
-  <div id="allContent">
+  <div id="allContent" style="overflow: hidden" (scroll)="top()">
+
     <router-outlet></router-outlet>
+
   </div>
   <!--主体内容结束-->
 
