--- a/src/app/home/component/home/home.component.css
+++ b/src/app/home/component/home/home.component.css
@@ -1,9 +1,10 @@
 /*头部开始*/
 #allHeader{
   height: 50px;
-  border-bottom: solid 1px rgb(213,213,213);
-  box-shadow: 0 0 3px rgb(228,228,228);
-  background: rgb(112,57,135);
+
+  box-shadow: 0 0 5px rgb(128,128,128);
+  background: rgb(178,34,34);
+
   width: 100%;
   z-index: 1;
   position: fixed;
@@ -23,25 +24,54 @@
 /*打开关闭导航面板按钮*/
 #toggleNavBtn{
   float: right;
-  width: 30px;
-  height: 30px;
-  background: white;
+
+  background: rgb(233,30,99);
+  font-weight: bold;
+  position: relative;
+  left: 20px;
+  top: 27px;
+  transform: scale(0.9,0.9);
+}
+#toggleNavBtn:hover{
+   animation: toggleNavBtnHover 0.3s ;
+   animation-fill-mode:forwards;
+}
+@keyframes toggleNavBtnHover{
+  100%{
+    transform: scale(1.0,1.0);
+  }
+}
+/*导航面板待关闭的箭头动画*/
+.arrow_back_close{
+   animation: arrow_back_close 0.5s ;
+   animation-fill-mode:forwards;
+}
+.arrow_back_open{
+  animation: arrow_back_open 0.5s ;
+  animation-fill-mode:forwards;
 }
 #toggleNavBtn i{
-  font-size: 20px;
-  color: gray;
-  animation: asc1 5s  linear infinite ;
-  transform-origin:20px 12px ;
+  font-size: 23px;
+  color: white;
+  margin-bottom: 15px;
+  display: block;
 }
-@keyframes asc {
+/*导航面板待关闭的箭头动画*/
+@keyframes arrow_back_close {
   0% {
     transform: rotate(0deg);
   }
-  50% {
+  100%{
+    transform: rotate(180deg);
+  }
+}
+/*导航面板待打开的箭头动画*/
+@keyframes arrow_back_open {
+  0% {
     transform: rotate(180deg);
   }
   100%{
-    transform: rotate(360deg);
+    transform: rotate(0deg);
   }
 }
 
@@ -56,10 +86,29 @@
   float: right;
   padding-right: 80px;
   height: 50px;
+  margin-top: 5px;
 }
 #rightHeader md-input-container{
   font-size: 15px;
   height: 50px;
+  color: white;
+}
+/*去除默认input样式*/
+.simpleInput{
+  background: none;
+  border: none;
+  border-bottom: solid white 1px;
+  border-radius: 0;
+  width: 150px;
+  color: white;outline: none;
+}
+
+.simpleInput:focus{
+  border: none;
+  border-bottom: solid white 1px;
+}
+
+input::-webkit-input-placeholder {
   color: white;
 }
 #rightHeader button{
@@ -76,7 +125,8 @@
   width: 100%;
   position:absolute;
   z-index: 0;
-  background: rgb(233,237,240);
+  /*background: rgb(233,237,240);*/
+  background: rgb(242,242,242);
 }
 #navContent{
   padding-top: 52px;
@@ -85,12 +135,11 @@
 #sideNavPanel{
   border-right: 1px solid rgb(213,213,213);
   box-shadow: 0 0 5px rgb(200,200,200);
-  background: rgb(241,241,241);
+  background: white;
 }
 
 /*主体内容*/
 #allContent{
-  position: relative;
   padding-top: 52px;
 }
 
@@ -100,14 +149,14 @@
   text-align: center;
   height: 100px;
   padding: 10px;
-  box-shadow: 0 0 5px rgb(150,150,150);
+  box-shadow: 0 0 5px rgb(170,170,170);
   background-image: url("../../../../assets/img/profileBG.png");
   background-position: bottom;
   background-repeat: no-repeat;
 }
 #profileImg{
-  width: 54px;
-  border-radius: 27px;
+  width: 64px;
+  border-radius: 32px;
   opacity: 1 !important;
   margin-top: 10px;
 }
@@ -120,6 +169,7 @@
   margin-top: 20px;
 
 }
+
 /*导航选项*/
 .nav button{
   width: 100%;
@@ -137,14 +187,32 @@
 /*导航箭头*/
 .arrow_drop{
   margin-left: 60px;
+  font-size: 27px;
+  color: rgb(150,150,150);
+}
+/*导航被激活的样式*/
+.navActive{
+  background: rgb(213,213,213);
+}
+.navActive .arrow_drop{
+  animation: navActiveArrow_drop 0.3s;
+  animation-fill-mode:forwards;
+}
+/*激活的导航箭头*/
+@keyframes navActiveArrow_drop {
+  100%{
+    transform:rotate(-90deg)
+  }
 }
 /*导航结束*/
 
-md-tab-group{
-  background: white;
-
-}
-md-tab{
-  margin: auto !important;
-  border: solid;
+#message{
+  width: 318px;
+  height: 191px;
+  position: absolute;
+  left: 100%;
+  top: 100%;
+  background: goldenrod;
+  transform: translate(-100%, -100%); /* 50%为自身尺寸的一半 */
+  display: none;
 }
