--- a/src/app/person-center/component/home-page/home-page.component.html
+++ b/src/app/person-center/component/home-page/home-page.component.html
@@ -1,3 +1,7 @@
-<p>
-  home-page works!
-</p>
+<div id="all">
+  <!--海报开始-->
+  <div id="all-poster" >
+    <!--<img src="../../../../assets/img/person-center-poster.png"/>-->
+  </div>
+  <!--海报结束-->
+</div>
