--- a/src/app/person-center/component/person-center/person-center.component.html
+++ b/src/app/person-center/component/person-center/person-center.component.html
@@ -1,13 +1,17 @@
-<nav md-tab-nav-bar>
-  <a md-tab-link
-     *ngFor="let link of navLinks"
-     [routerLink]="link.path"
-     routerLinkActive #rla="routerLinkActive"
-     [active]="rla.isActive">
-    {{link.label}}
-  </a>
-</nav>
-<router-outlet></router-outlet>
+<div id="warpNav" >
+    <nav md-tab-nav-bar>
+      <a md-tab-link
+         *ngFor="let link of navLinks"
+         [routerLink]="link.path"
+         routerLinkActive #rla="routerLinkActive"
+         [active]="rla.isActive">
+        {{link.label}}
+      </a>
+    </nav>
+  </div>
+  <router-outlet></router-outlet>
+
+
 
 
 
