--- a/src/app/home/component/home/home.component.css
+++ b/src/app/home/component/home/home.component.css
@@ -2,9 +2,13 @@
 #allHeader{
   height: 50px;
 
-  box-shadow: 0 0 5px rgb(128,128,128);
-  background: rgb(178,34,34);
- /* background: rgb(255,64,129);*/
+  box-shadow: 0 0 5px rgb(228,228,228);
+/*  background: rgb(178,34,34);
+
+
+  background: rgb(220, 132, 163);*/
+/*  background: rgb(63,81,181);*/
+  background: rgb(242,242,242);
   width: 100%;
   z-index: 1;
   position: fixed;
@@ -20,6 +24,9 @@
 #leftHeader img{
   margin-top: 10px;
   margin-left: 20px;
+}
+#red-fruit-span{
+  color: rgb(233,30,99);
 }
 /*打开关闭导航面板按钮*/
 #toggleNavBtn{
@@ -51,10 +58,11 @@
   animation-fill-mode:forwards;
 }
 #toggleNavBtn i{
-  font-size: 23px;
+  font-size: 35px;
   color: white;
   margin-bottom: 15px;
   display: block;
+  font-weight: bold;
 }
 /*导航面板待关闭的箭头动画*/
 @keyframes arrow_back_close {
@@ -88,34 +96,30 @@
   height: 50px;
   margin-top: 5px;
 }
-#rightHeader md-input-container{
-  font-size: 15px;
-  height: 50px;
-  color: white;
-}
+
 /*去除默认input样式*/
 .simpleInput{
   background: none;
   border: none;
-  border-bottom: solid white 1px;
+  border-bottom: solid gray 1px;
   border-radius: 0;
   width: 150px;
-  color: white;outline: none;
+  color: gray;outline: none;
 }
 
 .simpleInput:focus{
   border: none;
-  border-bottom: solid white 1px;
+  border-bottom: solid gray 1px;
 }
 
 input::-webkit-input-placeholder {
-  color: white;
+  color: gray;
 }
 #rightHeader button{
   margin-right: 20px;
 }
 #rightHeader i{
-  color: white;
+  color: gray;
 }
 
 /*头部结束*/
@@ -125,8 +129,8 @@ input::-webkit-input-placeholder {
   width: 100%;
   position:absolute;
   z-index: 0;
-  background: rgb(233,237,240);
- /* background: rgb(242,242,242);*/
+  /*background: rgb(233,237,240);*/
+   background: rgb(242,242,242);
 }
 #navContent{
   padding-top: 52px;
@@ -182,7 +186,7 @@ input::-webkit-input-placeholder {
 .nav i:not(.arrow_drop){
   font-size: 26px;
   margin-right: 18px;
-  color: firebrick;
+
 }
 /*导航箭头*/
 .arrow_drop{
@@ -193,6 +197,10 @@ input::-webkit-input-placeholder {
 /*导航被激活的样式*/
 .navActive{
   background: rgb(213,213,213);
+  color: firebrick;
+}
+.navActive .material-icons{
+  color: firebrick;
 }
 .navActive .arrow_drop{
   animation: navActiveArrow_drop 0.3s;
@@ -204,6 +212,7 @@ input::-webkit-input-placeholder {
     transform:rotate(-90deg)
   }
 }
+
 /*导航结束*/
 
 #message{
@@ -212,7 +221,8 @@ input::-webkit-input-placeholder {
   position: absolute;
   left: 100%;
   top: 100%;
-  background: goldenrod;
+  background: white;
   transform: translate(-100%, -100%); /* 50%为自身尺寸的一半 */
+  box-shadow: 0 0 3px gray;
   display: none;
 }
