--- a/src/app/login/component/login-body/login-body.component.css
+++ b/src/app/login/component/login-body/login-body.component.css
@@ -116,7 +116,7 @@ md-checkbox{
 #loginBtn{
   margin-top: 15px;
   width: 100%;
-  /* background: rgb(253,86,106);*/
+   background: rgb(253,86,106);
 }
 #justRegister{
   display: block;
