--- a/src/app/person-info/component/base-info/base-info.component.css
+++ b/src/app/person-info/component/base-info/base-info.component.css
@@ -3,30 +3,99 @@ main{
   width: 800px;
   margin: auto;
   margin-top: 20px;
-
-}
-/*
-
-*/
-.all-info{
-  height: 500px;
-  margin-top: 20px;
-  box-shadow: 0 0 3px rgb(203,203,203);
+  height: 430px;
   background: white;
-  margin-bottom: 10px;
+  box-shadow: 0 0 3px rgb(183,183,183); ;
+  /*border-top: solid rgb(63,81,181);*/
+  border-top: solid  rgb(34,170,210);
   border-radius: 3px;
-  padding: 20px;
-
 }
+
 /*我的资料*/
 #my-info{
-  border-top: solid rgb(163,163,163);
-
+  border-bottom: 1px solid rgb(223,223,223);
+  overflow: hidden;
+  margin-bottom: 20px;
+  height: 303px;
+  padding: 20px;
 }
+
 .info{
-  display: inline-block;
-  height: 300px;
-  border: solid;
   width: 360px;
   margin-left: 10px;
+}
+/*左边的资料框*/
+.info-left{
+  height: 300px;
+  float: left;
+}
+/*右边的资料框*/
+.info-right{
+  height: 280px;
+  float: right;
+  padding-top: 23px;
+
+}
+/*input*/
+md-input-container input{
+  width:250px;
+}
+
+/*左边的资料开始*/
+
+/*出生日期*/
+#born{
+  width:200px;
+}
+/*下拉框样式*/
+.select{
+  width: 293px;
+}
+/*城市下拉框*/
+#city-select{
+  margin-top: 25px;
+}
+/*职业下拉框*/
+#professions-select{
+  margin-top: 35px;
+}
+/*左边的资料结束*/
+
+/*右边的资料开始*/
+
+/*上传头像的div*/
+#upload-div{
+  padding-top: 1px;
+  height: 65px;
+
+  line-height: 40px;
+}
+#upload-div i{
+  font-size: 30px;
+}
+/*性别*/
+#sexRadioGroup {
+  margin-top: 20px !important;
+}
+#sexRadioGroup md-radio-button:last-child{
+  margin-left: 50px;
+}
+#sexRadioGroup md-radio-button:first-child{
+  margin-left: 110px;
+}
+
+#hobby-select{
+  margin-top: 50px;
+}
+#character-select{
+  margin-top: 40px;
+}
+/*右边的资料结束*/
+
+/*保存资料的按钮*/
+#update-info-btn{
+  display: block;
+  width: 20%;
+  margin: auto;
+  background: rgb(34,170,210);;
 }
