--- a/src/app/person-info/component/base-info/base-info.component.html
+++ b/src/app/person-info/component/base-info/base-info.component.html
@@ -1,13 +1,64 @@
 <main>
-  <div id="my-info" class="all-info">
-    <div class="info">
+  <form [formGroup]="infoGroup" (ngSubmit)="doUpdate()">
+    <div id="my-info">
+      <div class="info-left info">
+        <md-input-container>
+          <span mdPrefix class="input-prefix">昵称:</span>
+          <input mdInput formControlName="nickname">
+        </md-input-container>
+        <!--出生日期-->
+        <md-input-container>
+          <span mdPrefix class="input-prefix">出生日期:</span>
+          <input id="born" readonly mdInput [mdDatepicker]="picker" formControlName="born">
+          <button mdSuffix [mdDatepickerToggle]="picker"></button>
+        </md-input-container>
+        <md-datepicker #picker startView="year"></md-datepicker>
+        <!--居住地-->
+        <md-select id="city-select" class="select" placeholder="居住地" formControlName="city">
+          <md-option *ngFor="let city of cities" [value]="city">
+            {{ city}}
+          </md-option>
+        </md-select>
+
+        <!--职业-->
+        <md-select id="professions-select" class="select" placeholder="职业" formControlName="profession">
+          <md-option *ngFor="let profession of professions" [value]="profession">
+            {{ profession}}
+          </md-option>
+        </md-select>
+      </div>
+      <div class="info-right info">
+        <div id="upload-div">
+          <span class="input-prefix" mdPrefix>头像:</span>
+          <button md-raised-button type="button">上传图片</button>
+        </div>
+        <!--性别-->
+        <md-radio-group id="sexRadioGroup" mdTooltip="要修改性别，请联系管理员" formControlName="sex">
+          <span class="input-prefix" mdPrefix>性别:</span>
+          <md-radio-button color="primary" disabled value="1">男</md-radio-button>
+          <md-radio-button color="accent" disabled id="womanRadio" value="0">女</md-radio-button>
+        </md-radio-group>
+        <br>
+        <!--爱好-->
+        <md-select id="hobby-select" class="select" placeholder="爱好" formControlName="hobby">
+          <md-option *ngFor="let hobby of hobbies" [value]="hobby">
+            {{ hobby}}
+          </md-option>
+        </md-select>
+        <!--爱好-->
+        <md-select id="character-select" class="select" placeholder="性格" formControlName="character">
+          <md-option *ngFor="let character of characters" [value]="character">
+            {{ character}}
+          </md-option>
+        </md-select>
+      </div>
 
     </div>
-    <div class="info">
+    <button id="update-info-btn" type="submit" md-raised-button color="primary">
+      <i class="material-icons" >save</i>
+      保存资料
+    </button>
+  </form>
 
-    </div>
-  </div>
-  <!--<div id="half-info" class="info">
 
-  </div>-->
 </main>
