--- a/src/app/person-info/component/base-info/base-info.component.html
+++ b/src/app/person-info/component/base-info/base-info.component.html
@@ -30,7 +30,7 @@
       <div class="info-right info">
         <div id="upload-div">
           <span class="input-prefix" mdPrefix>头像:</span>
-          <button md-raised-button type="button">上传图片</button>
+          <button md-raised-button type="button" (click)="openUploadDialog()">上传图片</button>
         </div>
         <!--性别-->
         <md-radio-group id="sexRadioGroup" mdTooltip="要修改性别，请联系管理员" formControlName="sex">
