--- a/src/app/person-center/component/mood/mood.component.css
+++ b/src/app/person-center/component/mood/mood.component.css
@@ -1,7 +1,8 @@
 main{
   width: 800px;
   height: 300px;
-  background: rosybrown;
+  /*background: white;*/
+ /* box-shadow: 0 0 3px rgb(183,183,183); ;*/
   margin: auto;
   margin-top: 20px;
 }
