--- a/src/app/person-center/component/mood/mood.component.html
+++ b/src/app/person-center/component/mood/mood.component.html
@@ -1,4 +1,16 @@
 <main>
-  <div [froalaEditor]="rfOptions"></div>
+  <div id="froala-editor" [froalaEditor]="rfOptions"></div>
+    <div id="all-mood">
+      <div class="mood">
+        <div class="mood-left">
+          <span class="b-mood-circle"></span>
+          <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
+        </div>
+        <app-sigle-mood></app-sigle-mood>
+      </div>
 
+      <div class="mood-times">
+        <i class="material-icons">access_time</i><span>2016</span>
+      </div>
+    </div>
 </main>
