--- a/src/app/person-center/component/person-center/person-center.component.css
+++ b/src/app/person-center/component/person-center/person-center.component.css
@@ -1,11 +1,14 @@
 #warpNav{
-  background: white;
+
   border-bottom: solid 1px rgb(224,224,224);
   box-shadow: 0 0 5px rgb(213,213,213);
-
+  width: 100%;
+  background: white;
 }
+
 nav{
   width: 790px;
   margin: auto;
   border: none;
+
 }
