--- a/src/app/person-center/component/mood/mood.component.html
+++ b/src/app/person-center/component/mood/mood.component.html
@@ -1,16 +1,50 @@
 <main>
   <div id="froala-editor" [froalaEditor]="rfOptions"></div>
-    <div id="all-mood">
-      <div class="mood">
-        <div class="mood-left">
-          <span class="b-mood-circle"></span>
-          <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
-        </div>
-        <app-sigle-mood></app-sigle-mood>
-      </div>
+  <div id="mood-editor">
 
-      <div class="mood-times">
-        <i class="material-icons">access_time</i><span>2016</span>
+  </div>
+  <div id="all-mood">
+    <div class="mood-times">
+      <span>今天</span>
+    </div>
+    <div class="mood">
+      <div class="mood-left">
+        <span class="b-mood-circle"></span>
+        <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
+      </div>
+      <div class="mood-right">
+        <app-sigle-mood></app-sigle-mood>
+        <div class="mood-bottom">
+          <app-art-operation></app-art-operation>
+        </div>
       </div>
     </div>
+    <div class="mood">
+      <div class="mood-left">
+        <span class="b-mood-circle"></span>
+        <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
+      </div>
+      <div class="mood-right">
+        <app-sigle-mood></app-sigle-mood>
+        <div class="mood-bottom">
+          <app-art-operation></app-art-operation>
+        </div>
+      </div>
+    </div>
+    <div class="mood-times">
+      <span>昨天</span>
+    </div>
+    <div class="mood">
+      <div class="mood-left">
+        <span class="b-mood-circle"></span>
+        <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
+      </div>
+      <div class="mood-right">
+        <app-sigle-mood></app-sigle-mood>
+        <div class="mood-bottom">
+          <app-art-operation></app-art-operation>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
