--- a/src/app/home/component/home/home.component.html
+++ b/src/app/home/component/home/home.component.html
@@ -20,7 +20,7 @@
     <button md-icon-button>
       <i class="material-icons ">dashboard</i>
     </button>
-    <button md-icon-button class="msg-btn">
+    <button md-icon-button >
       <i class="material-icons icon-btn">notifications</i>
     </button>
     <button md-icon-button><i class="material-icons icon-btn">person</i></button>
