--- a/src/app/share/component/sigle-mood/sigle-mood.component.html
+++ b/src/app/share/component/sigle-mood/sigle-mood.component.html
@@ -5,7 +5,7 @@
       <p class="mood-howlong">5分钟前</p>
     </div>
     <div class="mood-content">
-      我们去玩吧
+      <p-lightbox [images]="images"></p-lightbox>
     </div>
 </div>
 
