--- a/src/app/share/component/upload-img/upload-img.component.css
+++ b/src/app/share/component/upload-img/upload-img.component.css
@@ -1,6 +1,5 @@
 main{
-  height: 200px;
-  width: 350px;
+width: 345px;
 
 }
 #upload-title{
@@ -16,4 +15,66 @@ main{
 #upload-tip{
   font-size: 12px;
   margin-top: 10px;
+  height: 30px;
 }
+#upload-mood-img{
+  background: rgb(255,129,64);
+  height: 30px;
+  line-height: 30px;
+  width: 50px;
+  float: right;
+  color: white;
+  margin-right: 10px;
+}
+/*上传图片的div*/
+#upload-img-div{
+  margin: auto;
+  margin-top: 10px;
+}
+/*准备发表的图片*/
+.pre-send-img{
+  display: inline-block;
+  margin-left: 5px;
+  cursor: move;
+}
+
+.upload {
+  height: 76px;
+  width:76px;
+  overflow: hidden;
+  display: inline-block;
+  border: dashed 2px rgb(180,180,180);
+  margin-left: 5px;cursor: pointer;
+  position: relative;
+  *display: inline;
+  *zoom: 1;
+}
+.upload:hover > i{
+
+  color: rgb(255,129,64);
+}
+.upload:hover{
+  border-color: rgb(255,129,64);
+}
+.upload  input {
+  height: 100px;
+  width:80px;
+  top: -25px;
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  filter: alpha(opacity=0);
+}
+.upload i {
+  font-size: 30px;
+  color:rgb(180,180,180) ;
+  margin: auto;
+  display: block;
+  position: relative;
+  left: 22px;
+  top:22px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
